# MusicWrangler

./: .gitignore  README.md  pyproject.toml
src/: flatten_directory.py  process_music.py  song_list.txt
